--- a/demuxnet/main.ipynb
+++ b/demuxnet/main.ipynb
@@ -1652,7 +1652,7 @@
     "import torch.optim as optim\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torch.autograd import Variable\n",
-    "#from sklearn.model_selection import train_test_split as ts\n",
+    "from sklearn.model_selection import train_test_split as ts\n",
     "\n",
     "class DNNClassifier(nn.Module):\n",
     "    def __init__(self, input_dim, hidden_dim, output_dim):\n",
